fixes zoom in-out text jump on hover

--- a/src/components/Home/Map/Map.scss
+++ b/src/components/Home/Map/Map.scss
@@ -26,8 +26,14 @@
       align-items: center;
       justify-content: center;
       transform: rotate(90deg);
-      background-color: rgba(255, 255, 255, 0.5);
       padding-bottom: 0.1rem;
+      color: rgb(0, 120, 168);
+      background-color: rgba(255, 255, 255, 0.5);
+
+      &:hover {
+        display: flex !important;
+        color: rgb(0, 120, 168); 
+      }
     }
   }
   
